# $Id$

Summary of changes in AVaRICE 2.14
==================================

. Replace the USB daemon by Posix threads (bug #15).

. Implement JTAGICE3 handling

. Implement Atmel-ICE handling, including JTAGICE3 with firmware
  version 3.x, EDBG and mEDBG integrated debuggers

. Implement the GDB 7+ flash write protocol (for the "load" command)

. Implement a backend command for the GDB "monitor" command; by
  now, this is mostly a stub, but "monitor help" and "monitor
  version" are already around.

. New devices: ATmega256RFR2, ATmega2564RFR2, ATmega128RFR2,
  ATmega1284RFR2, ATmega64RFR2, ATmega644RFR2, ATxmega64A3

. Bugfix: support software breakpoints on ATmega48P, ATmega88P,
  ATmega168P, ATmega328P, ATtiny24, ATtiny44, ATtiny84


Summary of changes in AVaRICE 2.13
==================================

. Rearrange the entire error handling to use exceptions, rather than a
  mix between error code returns, and prematurely exiting the program
  from deep inside, without any attempt to cleanup the JTAG ICE
  connection status.  This is a lot cleaner now, with a much reduced
  chance to leave the ICE in an unworkable state when exiting the
  program.

. New devices: ATxmega128B1, ATxmega128B3, ATxmega64B1, ATxmega64B3,
  ATmega16M1, ATmega64M1, ATmega64C1, ATxmega128A3, ATxmega32A4

. Deprecate target programming (downloading) from the ELF file.  It
  must be explicitly enabled now by the --enable-target-programming
  configure option.  If not enabled, AVaRICE no longer depends on
  libbfd and its prerequisites.  Use AVRDUDE for device programming.

. Added IO register definitions (for GDB's "info io_registers"
  command) for the following devices: ATmega323, ATmega64, AT90CAN128,
  ATmega164p, ATmega324p, ATmega644, ATmega325, ATmega3250, ATmega645,
  ATmega6450, ATmega329, ATmega3290, ATmega649, ATmega6490, ATmega640,
  ATmega1280, ATmega1281, ATmega2560, ATmega2561, ATmega48, ATmega88,
  ATmega168, ATtiny13, ATtiny2313, AT90PWM2, AT90PWM3, AT90PWM2B,