@@ -1,5 +1,10 @@
 # $Id$
 
+Summary of changes since AVaRICE 2.14-win
+==================================
+. New devices: ATxmega256C3
+
+
 Summary of changes in AVaRICE 2.14
 ==================================
 
